test/error/syntax/err2.rzy

Foo{Bar:Natural} = Component
elementary
end

Err2 = Component
composition
  foo: Foo;  // no template parameter
end

